--- a/package.json
+++ b/package.json
@@ -18,22 +18,44 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "^10.1.0",
     "gatsby": "^2.26.1",
+    "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.8.0",
+    "gatsby-plugin-feed": "^2.10.0",
+    "gatsby-plugin-google-analytics": "^2.8.0",
     "gatsby-plugin-manifest": "^2.9.0",
     "gatsby-plugin-mdx": "^1.7.0",
     "gatsby-plugin-netlify-cms": "^4.7.0",
     "gatsby-plugin-offline": "^3.7.0",
+    "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.11.1",
+    "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-plugin-sitemap": "^2.9.0",
+    "gatsby-plugin-typography": "^2.9.0",
+    "gatsby-remark-copy-linked-files": "^2.7.0",
+    "gatsby-remark-images": "^3.8.1",
+    "gatsby-remark-prismjs": "^3.10.0",
+    "gatsby-remark-responsive-iframe": "^2.8.0",
+    "gatsby-remark-smartypants": "^2.7.0",
     "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-transformer-remark": "^2.13.1",
     "gatsby-transformer-sharp": "^2.9.0",
     "netlify-cms-app": "^2.14.7",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
+    "postcss": "^8.2.1",
+    "prismjs": "^1.22.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-loading-skeleton": "^2.1.1",
+    "react-typography": "^0.16.19",
+    "tailwindcss": "^2.0.2",
+    "typeface-domine": "^1.1.13",
+    "typeface-josefin-sans": "^1.1.13",
+    "typeface-montserrat": "^1.1.13",
+    "typography": "^0.16.19",
+    "typography-theme-wordpress-2016": "^0.16.19"
   }
 }
