--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gatsby-plugin-google-analytics": "^2.10.0",
     "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-mdx": "^1.9.0",
-    "gatsby-plugin-netlify-cms": "4.3.11",
+    "gatsby-plugin-netlify-cms": "^4.9.0",
     "gatsby-plugin-offline": "^3.9.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sass": "^2.8.0",
