--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@weknow/gatsby-remark-codepen": "^0.1.0",
     "autoprefixer": "^10.2.3",
     "gatsby": "^2.31.1",
     "gatsby-awesome-pagination": "^0.3.6",
