--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby": "^2.31.1",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.10.0",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed": "^2.12.0",
     "gatsby-plugin-google-analytics": "^2.10.0",
     "gatsby-plugin-manifest": "^2.11.0",
