--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@styled-icons/remix-line": "^10.18.0",
     "algoliasearch": "^4.5.1",
     "babel-plugin-styled-components": "^1.11.1",
-    "disqus-react": "^1.0.10",
+    "disqus-react": "^1.0.11",
     "exifreader": "^3.12.3",
     "gatsby": "^3.3.1",
     "gatsby-cli": "^3.3.0",
@@ -41,16 +41,13 @@
     "gatsby-remark-embed-video": "3.0.10",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-images": "5.0.0",
-    "gatsby-remark-katex": "^5.0.0",
     "gatsby-remark-responsive-iframe": "^4.1.0",
     "gatsby-remark-smartypants": "^4.1.0",
     "gatsby-remark-sub-sup": "^1.0.0",
     "gatsby-remark-vscode": "^3.1.0",
     "gatsby-source-filesystem": "3.3.0",
-    "gatsby-styled-components-dark-mode": "^2.0.3",
     "gatsby-transformer-sharp": "^3.3.0",
     "gatsby-transformer-yaml": "^3.3.0",
-    "katex": "^0.12.0",
     "lodash": "^4.17.20",
     "mdx": "silvenon/vscode-mdx",
     "plotly.js": "^1.56.0",
@@ -79,7 +76,7 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
-    "build": "gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
