--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "repository": "https://github.com/hertzden/CSS-Widgets",
   "license": "MIT",
   "dependencies": {
+    "@fontsource/baloo-2": "^4.2.3",
     "@fontsource/inter": "^4.2.2",
+    "@fontsource/league-mono": "^4.2.4",
     "@fontsource/megrim": "^4.2.2",
     "@fontsource/titillium-web": "^4.2.2",
     "@google/markerclustererplus": "^5.1.3",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@styled-icons/remix-line": "^10.18.0",
+    "@weknow/gatsby-remark-codepen": "^0.1.0",
     "algoliasearch": "^4.5.1",
     "babel-plugin-styled-components": "^1.11.1",
     "disqus-react": "^1.0.11",
@@ -39,6 +42,7 @@
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^4.1.0",
     "gatsby-remark-embed-video": "3.0.10",
+    "gatsby-remark-embedder": "^5.0.0",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-images": "5.0.0",
     "gatsby-remark-responsive-iframe": "^4.1.0",
@@ -46,6 +50,7 @@
     "gatsby-remark-sub-sup": "^1.0.0",
     "gatsby-remark-vscode": "^3.1.0",
     "gatsby-source-filesystem": "3.3.0",
+    "gatsby-transformer-remark": "^4.1.0",
     "gatsby-transformer-sharp": "^3.3.0",
     "gatsby-transformer-yaml": "^3.3.0",
     "lodash": "^4.17.20",
