Updating syntax highligting utility

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@fontsource/baloo-2": "^4.2.3",
+    "@fontsource/fira-code": "^4.2.2",
     "@google/markerclustererplus": "^5.1.3",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
@@ -40,7 +41,9 @@
     "gatsby-remark-embed-video": "3.0.10",
     "gatsby-remark-embedder": "^5.0.0",
     "gatsby-remark-emojis": "^0.4.3",
+    "gatsby-remark-highlight-code": "^2.2.1",
     "gatsby-remark-images": "5.0.0",
+    "gatsby-remark-prismjs": "^5.1.0",
     "gatsby-remark-responsive-iframe": "^4.1.0",
     "gatsby-remark-smartypants": "^4.1.0",
     "gatsby-remark-sub-sup": "^1.0.0",
@@ -52,6 +55,7 @@
     "lodash": "^4.17.20",
     "mdx": "silvenon/vscode-mdx",
     "plotly.js": "^1.56.0",
+    "prismjs": "^1.23.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
