--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fontsource/baloo-2": "^4.2.3",
     "@fontsource/fira-code": "^4.2.2",
+    "@fontsource/inter": "^4.3.0",
+    "@fontsource/titillium-web": "^4.3.0",
     "@google/markerclustererplus": "^5.1.3",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
