--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gatsby-remark-responsive-iframe": "^4.1.0",
     "gatsby-remark-smartypants": "^4.1.0",
     "gatsby-remark-sub-sup": "^1.0.0",
+    "gatsby-remark-twitter-cards": "^0.6.1",
     "gatsby-remark-vscode": "^3.1.0",
     "gatsby-source-filesystem": "3.3.0",
     "gatsby-transformer-remark": "^4.1.0",
